--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "scripts": {
     "build": "cd vue && npm run build",
     "install": "cd vue && npm ci"
-  }
+  },
+  "cacheDirectories": ["vue/node_modules"]
 }
