--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "cd vue && npm run build",
-    "install": "cd vue && ls node_modules/.bin && npm ci"
+    "build": "cd vue && ls -al node_modules/.bin && npm run build",
+    "install": "cd vue && npm ci"
   },
   "cacheDirectories": ["vue/node_modules"],
   "engines": {
